# xblang

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  Makefile  Readme.md  example.xb
cmake/modules/: AddXBLang.cmake  CMakeLists.txt  CMakePolicy.cmake  XBLangConfig.cmake.in  XBLangConfigVersion.cmake.in
extensions/: CMakeLists.txt
extensions/gpu/: CMakeLists.txt  Extension.cpp  GPUExtension.h  InitExtension.h  Plugin.cpp  Syntax.cpp  Syntax.td
extensions/omp/: CMakeLists.txt  Extension.cpp  Extension.h  InitExtension.h  Plugin.cpp  Syntax.cpp  Syntax.td
include/: CMakeLists.txt
include/xblang/: CMakeLists.txt
include/xblang/ADT/: DoubleTypeSwitch.h  Identifier.h  TinyVector.h
include/xblang/Basic/: Concept.h  Context.h  ContextDialect.h  Diagnostics.h  Pattern.h  PatternApplicator.h  SourceLocation.h  SourceManager.h  SourceState.h  TypeInfo.h  TypeSystem.h
include/xblang/Codegen/: CMakeLists.txt  Codegen.h  Passes.h  Passes.td  Utils.h
include/xblang/Dialect/: CMakeLists.txt
include/xblang/Driver/: Driver.h
include/xblang/Eval/: Eval.h  Utils.h
include/xblang/Frontend/: CompilerInstance.h  CompilerInvocation.h  MLIRPipeline.h
include/xblang/Interfaces/: CMakeLists.txt  Codegen.h  Concept.h  Concept.td  Eval.h  Sema.h  Symbol.td  SymbolTable.h  Syntax.h
include/xblang/Lang/: CMakeLists.txt  InitAll.h
include/xblang/Lang/Meta/: Init.h
include/xblang/Lang/Parallel/: CMakeLists.txt  Init.h
include/xblang/Lang/XBLang/: CMakeLists.txt  Init.h
include/xblang/Sema/: CMakeLists.txt  Passes.h  Passes.td  Sema.h  TypeSystem.h  TypeSystemBase.h  TypeUtil.h  XBLangTypeSystemMixin.h
include/xblang/Support/: BuilderBase.h  CompareExtras.h  Format.h  LLVM.h  Program.h  STLExtras.h  System.h  Worklist.h
include/xblang/Syntax/: CommonLex.td  LexerBase.h  ParseResult.h  ParserBase.h  ParsingCombinators.h  SyntaxBase.td  SyntaxContext.h
include/xblang/Syntax/IR/: CMakeLists.txt  CharClass.h  SyntaxDialect.h  SyntaxDialect.td  SyntaxLexOps.td  SyntaxOps.td  SyntaxParseOps.td  SyntaxTypes.h
include/xblang/Syntax/LexGen/: SDTranslation.h  Tokens.inc
include/xblang/Syntax/ParserGen/: Tokens.inc  (+1 more)
include/xblang/TableGen/: Common.h  Concept.h  Lexer.h  Parser.h  Record.h  Util.h
include/xblang/XLG/: Builder.h  CMakeLists.txt  Concepts.h  Concepts.td  Init.h  Interfaces.h  Interfaces.td  XLGBase.td
include/xblang/XLG/Codegen/: Codegen.h
include/xblang/XLG/IR/: CMakeLists.txt  XLGDialect.h  XLGDialect.td  XLGOps.td  XLGTraits.h  XLGTypes.h
include/xblang/XLG/Sema/: Sema.h
lib/: CMakeLists.txt
lib/ADT/: CMakeLists.txt  Identifier.cpp
lib/Basic/: CMakeLists.txt  Context.cpp  Pattern.cpp  SourceManager.cpp  TypeSystem.cpp
lib/Codegen/: CMakeLists.txt  Codegen.cpp  CodegenPass.cpp  Utils.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Parallel/: CMakeLists.txt
lib/Dialect/Parallel/IR/: Attrs.cpp  CMakeLists.txt  Parallel.cpp
lib/Dialect/Parallel/Transforms/: CMakeLists.txt  Concretizer.cpp  LowerToLLVM.cpp  LowerToStd.cpp  NameMangling.cpp  OffloadMergeBinaries.cpp  ParGPUToLLVM.cpp  ParallelTransforms.cpp  Passes.cpp  Patterns.h  PromoteStackToMem.cpp
lib/Dialect/XBLang/: CMakeLists.txt
lib/Dialect/XBLang/Analysis/: CMakeLists.txt  ScopeAnalysis.cpp
lib/Dialect/XBLang/Concretization/: CMakeLists.txt  Concretization.cpp  Decl.cpp  Expr.cpp  Stmt.cpp
lib/Dialect/XBLang/IR/: ASMUtils.cpp  CMakeLists.txt  Decl.cpp  Enums.cpp  Expr.cpp  Interfaces.cpp  Stmt.cpp  Type.cpp  XBLang.cpp
lib/Dialect/XBLang/Transforms/: AllocaToEntry.cpp  CMakeLists.txt  Common.cpp  ImplicitCastConcretizer.cpp  Type.cpp  XBToCf.cpp  XBToLLVM.cpp  XBToSPIRV.cpp  XBToStd.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp  main.cpp
lib/Eval/: CMakeLists.txt  Eval.cpp  Utils.cpp
lib/Frontend/: CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  MLIRPipeline.cpp
lib/Interfaces/: CMakeLists.txt  Concept.cpp  SymbolTable.cpp
lib/Lang/: CMakeLists.txt
lib/Lang/Meta/Syntax/: CMakeLists.txt  Syntax.cpp
lib/Lang/Parallel/: CMakeLists.txt
lib/Lang/Parallel/Frontend/: CMakeLists.txt  Options.cpp
lib/Lang/Parallel/Syntax/: CMakeLists.txt  Syntax.cpp
lib/Lang/XBLang/: CMakeLists.txt
lib/Lang/XBLang/Codegen/: CMakeLists.txt  CodeGen.cpp  Decl.cpp  Expr.cpp  Stmt.cpp  Type.cpp
lib/Lang/XBLang/Eval/: CMakeLists.txt  Eval.cpp  Expr.cpp
lib/Lang/XBLang/Sema/: CMakeLists.txt  Decl.cpp  Expr.cpp  Sema.cpp  Stmt.cpp  Type.cpp
lib/Lang/XBLang/Syntax/: CMakeLists.txt  Lexer.cpp  Syntax.cpp
lib/Lang/XBLang/XLG/: CMakeLists.txt  XBG.cpp  XBGDecl.cpp  XBGExpr.cpp  XBGStmt.cpp  XBGType.cpp
lib/Sema/: CMakeLists.txt  Sema.cpp  SemaPass.cpp  TypeSystem.cpp
lib/Support/: CMakeLists.txt  Program.cpp  System.cpp
lib/Syntax/: CMakeLists.txt  LexerBase.cpp  Syntax.cpp
lib/Syntax/IR/: CMakeLists.txt  Syntax.cpp
lib/Syntax/LexGen/: CMakeLists.txt  SDTranslation.cpp
lib/Syntax/ParserGen/: CMakeLists.txt  SDTranslation.cpp
lib/Syntax/Transforms/: AnalizeSyntax.cpp  CMakeLists.txt  LexToDFA.cpp  MinimizeDFA.cpp  ProcessSyntax.cpp
lib/Syntax/Utils/: CMakeLists.txt  SDTUtils.cpp
lib/TableGen/: CMakeLists.txt  Common.cpp  Concept.cpp  Record.cpp  Util.cpp
lib/XLG/: CMakeLists.txt  Concepts.cpp  Interfaces.cpp
lib/XLG/Codegen/: CMakeLists.txt  CodeGen.cpp
lib/XLG/IR/: CMakeLists.txt  XLG.cpp
lib/XLG/Sema/: CMakeLists.txt  Sema.cpp
lib/XLG/Utils/: Builder.cpp  CMakeLists.txt
stdlib/: CMakeLists.txt
stdlib/Par/: CMakeLists.txt  Cache.h  MemUtil.h  ParRuntime.cpp  ParRuntime.h  Resource.h  Runtime.cpp  Runtime.h  VendorAPI.h
test/: .gitignore  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  llvm-lit.in
test/Unit/: lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
tools/mlir-opt/: CMakeLists.txt  mlir-opt.cpp
tools/xblang-syntax/: CMakeLists.txt  syntax-opt.cpp
tools/xblang-tblgen/: CMakeLists.txt  ConceptGen.cpp  LexerGen.cpp  ParserGen.cpp  TemplateEngine.cpp  TemplateEngine.h  xblang-tblgen.cpp
unittests/: CMakeLists.txt
unittests/Basic/: CMakeLists.txt  SourceManager.cpp
unittests/SyntaxGen/: CMakeLists.txt  Lex.cpp
(+79 files in other folders)
