add_subdirectory(Dialect)
add_subdirectory(Basic)
add_subdirectory(ADT)
add_subdirectory(Driver)
add_subdirectory(Codegen)
add_subdirectory(Frontend)
add_subdirectory(Eval)
add_subdirectory(Interfaces)
add_subdirectory(Sema)
add_subdirectory(Syntax)
add_subdirectory(Lang)
add_subdirectory(TableGen)
add_subdirectory(Support)
add_subdirectory(XLG)
